[package]
name = "webm2mp4_bot"
version = "0.1.0"
authors = ["Anton Sapunov <fort.sav.28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"
bytes = "0.5"
tempdir = "0.3.7"
tempfile = "3.1.0"
error-chain = "0.12.2"
log = "0.4.8"
tokio = "0.2.9"
pretty_env_logger = "0.4.0"
parse-display = "0.1.1"
teloxide = "0.2.0"
